--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>学习vue实例</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+</head>
+<body>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+<script type="text/javascript" src="./static/lib/jszip.js"></script>
+<script type="text/javascript" src="./static/lib/xlsx.js"></script>
+</body>
 </html>
